# dotfiles

./: .gitignore  README.md  install.sh  migrate.sh  sandbox.sh  update.sh
X11/: 99-elecom-huge.conf  99-ploopy-classic.conf  99-sanwa-gravi.conf  Xresources  compe_Xresources  xinitrc  xrandr.sh
alacritty/: .gitignore  alacritty.yml  base.yml  compe.yml  desktop.yml  laptop.yml  merge.sh  virt.yml
alacritty/gen-alacritty/: ChangeLog.md  README.md  gen-alacritty.cabal  package.yaml
alacritty/gen-alacritty/app/: Main.hs
alacritty/gen-alacritty/src/: AesonOptions.hs  Config.hs
alacritty/gen-alacritty/src/Config/: Colors.hs  (+2 more)
armagetronad/var/: autoexec.cfg  user.cfg
auto-cpufreq/: auto-cpufreq.conf
ghc/: ghci
git/: commit_template  config  ignore  install.sh
gtk-2.0/: gtkfilechooser.ini  gtkrc
gtk-3.0/: bookmarks  settings.ini
haskell/: cabal-config  fourmolu.yaml  ghci  stack-config.yaml
homepage-server/: homepage-server.service
homepage-server/config/: config.yaml
homepage-server/data/: nord.css
icons/default/: index.theme
install/: 00-configure-pacman.sh  00-setup-haskell.sh  01-create-xdg-dirs.sh  01-setup-haskell.sh  01-setup-zsh.sh  02-setup-haskell.sh  02-setup-npm.sh  02-setup-zsh.sh  03-setup-npm.sh  03-setup-nvim.sh  03-setup-zsh.sh  04-setup-nvim.sh  04-setup-rust.sh  05-setup-package-managers.sh  05-setup-rust.sh  06-install-additional-package-managers.sh  07-setup-ssh-agent.sh  08-setup-ranger.sh  09-setup-desktop.sh
installers/: desktop.sh  laptop.sh  virt.sh
keyboard/: quefrency_rev__2
migrations/: 1642889892__test1.sh  1642889897__test2.sh  1642889899__test3.sh  1643424007__make_xdg_directories.sh  1643424092__set_timezone.sh  1643424143__setup_git.sh  1643424181__link_scripts.sh  1643424426__configure_pacman.sh  1643424499__setup_haskell.sh  1643424534__setup_zsh.sh  1643424563__setup_npm.sh  1643424582__setup_nvim.sh  1643424605__setup_rust.sh  1643424629__install_additional_package_managers.sh  1643425678__setup_ssh_agent.sh  1643425730__setup_ranger.sh  1643425749__setup_desktop.sh  1643560850__setup-auto-cpufreq.sh  1643591300__install-shellcheck-and-shfmt.sh  1643600185__setup_tab_page.sh  1644106523__install-printer-stuff.sh  1644173132__install-email-stuff.sh  1644181854__add-armagetronad.sh  1644881118__setup-virt-manager.sh  1644882283__setup-docker.sh  1645340247__install-elecom-udev-rule.sh  1645342844__install-elecom-huge-mappings.sh  1645387729__convert_to_using_trayer.sh  1645841259__install-noto-fonts.sh  1646190908__copy-reflector-conf-instead-symlink.sh  1647902643__add_tmux.sh  1650212365__topgrade.sh  1653749105__setup_pg.sh  1653778023__setup-readline.sh  1659406623__move-wiki.sh  1668535339__add_more_mouse_settings.sh
mpd/: mpd.conf
ncmpcpp/: config
nvim/: .netrwhist  coc-settings.json  init.lua  init.vim  install.sh
nvim.new/: init.lua
nvim.new/lua/user/: keymap.lua  opts.lua
nvim.old/after/ftplugin/: elm.lua  sql.lua
nvim.old/lua/user/: autopairs.lua  keymap.lua  luatab.lua  treesitter.lua
nvim.old/spell/: en.utf-8.add
nvim.old/vimscript/user/: vimwiki.vim
nvim/after/ftplugin/: cabal.vim  elm.vim  haskell.vim  purescript.vim  sql.lua  sql.vim  terraform.vim  vimwiki.vim  xml.vim
nvim/lua/user/: cmp.lua  colorscheme.lua  keymap.lua  nvim-tree.lua  options.lua  opts.lua  plugins.lua  tabline.lua  treesitter.lua  vimwiki.lua
nvim/plugin/: packer_compiled.lua
nvim/spell/: en.utf-8.add  en.utf-8.add.spl
old/: README.md
old/X11/: xinitrc
old/alacritty/: lappier.yml
old/gtk-2.0/: gtkfilechooser.ini
old/mpd/: mpd.conf
old/ncmpcpp/: config
old/nvim/: coc-settings.json
old/stalonetray/: stalonetrayrc
old/xmobar/: xmobar-primary.hs
old/xmonad/: hie.yaml  xmonad.hs
old/zsh/: zprofile  zshenv
pacman/: pacman.conf
pg/: pg_format  psqlrc
picom/: picom.conf
ranger/: rc.conf
readline/: inputrc
sandbox/: Dockerfile  entrypoint.sh
scripts/: flac_to_v0  set_elecom_huge_settings  system-cleanup  system-update  update-firefox-user-js.sh
stack/: install.sh
stalonetray/: stalonetrayrc  virt
starship/: starship.toml
tmux/: tmux.conf
topgrade/: topgrade.toml
udev/: 99-elecom-huge-trackball.rules
vim/: Tomorrow-Night-Mine.vim  coc-settings.json  vimrc
vim/after/ftplugin/: haskell.vim  purescript.vim  sql.vim
xmobar/: cabal.project  cabal.project.freeze  package.yaml  stack.yaml  xmobar-custom.cabal  xmobar-primary.hs  xmobar-secondary.hs  xmobar.config
xmobar/app/: Primary.hs  Secondary.hs
xmonad/: .gitignore  build  cabal.project  cabal.project.freeze  hie.yaml  package.yaml  stack.yaml  start  update.sh  xmonad-custom.cabal  xmonad-local.cabal  xmonad-testing.cabal  xmonad.hs
xmonad.old/: cabal.project
xmonad.old/app/: XmonadMain.hs
xmonad/app/: Hostname.hs  Main.hs  MyKeys.hs  MyXmobar.hs  MyXmobarPrimary.hs  MyXmobarSecondary.hs  Theme.hs  XmobarMain.hs  XmonadMain.hs
xmonad/app/Colors/: Nord.hs
xmonad/shared/: cabal.project  cabal.project.freeze  shared.cabal
xmonad/shared/src/Shared/: Environment.hs  FilePaths.hs  Hostname.hs  Theme.hs  Utils.hs
xmonad/shared/src/Shared/Theme/: Color.hs  Font.hs
xmonad/shared/src/Shared/Theme/Palettes/: Nord.hs
xmonad/src/: Main.hs
xmonad/src/XMonad/Local/: Environment.hs  Hooks.hs  Hostname.hs  Keys.hs  Layout.hs  LayoutHook.hs  ManageHook.hs  StartupHook.hs  StatusBar.hs  Theme.hs  Utils.hs  Workspaces.hs
xmonad/src/XMonad/Local/Colors/: Nord.hs
xmonad/src/XMonad/Local/Theme/: Color.hs
xmonad/src/XMonad/Local/Theme/Palettes/: Nord.hs
xmonad/xmobar/: cabal.project  cabal.project.freeze  xmobar-local.cabal
xmonad/xmobar/app/: Main.hs
xmonad/xmobar/src/Xmobar/: Local.hs
xmonad/xmonad/: cabal.project  cabal.project.freeze  xmonad-local.cabal
xmonad/xmonad/app/: Main.hs
xmonad/xmonad/src/XMonad/: Local.hs
xmonad/xmonad/src/XMonad/Local/: Hooks.hs  Keys.hs  Layout.hs  ManageHook.hs  StartupHook.hs  StatusBar.hs  Utils.hs  Workspaces.hs
xrandr/: desktop.sh  laptop.sh  set.sh  virt.sh
zsh/: .zshenv  .zshrc  install.sh  zprofile  zshenv  zshrc
zsh/zprompts/: prompt_clean_setup
(+41 files in other folders)
