cabal-version: 3.0
name: xmobar-custom
version: 0.1.0.0

common shared
  default-language: Haskell2010 

  build-depends:
    , base ^>=4.14.3.0
    , xmobar ^>=0.41

  default-extensions:
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    StrictData
    TypeApplications
    ViewPatterns

  ghc-options:
    -Weverything 
    -Wno-implicit-prelude 
    -Wno-safe 
    -Wno-unsafe 
    -Wno-missing-exported-signatures 
    -Wno-missing-import-lists 
    -Wno-missed-specialisations 
    -Wno-all-missed-specialisations 
    -Wno-missing-local-signatures 
    -Wno-monomorphism-restriction 
    -Wno-missing-deriving-strategies
    -Wno-missing-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -threaded
    -rtsopts
    -with-rtsopts=-N

  hs-source-dirs: app

executable xmobar-primary
  import: shared
  main-is: Primary.hs

executable xmobar-secondary
  import: shared
  main-is: Secondary.hs
