cabal-version: 3.0
name: xmonad-custom
version: 0.1.0.0

executable xmonad
  default-language: Haskell2010

  build-depends: 
    , X11 >= 1.10.2 && < 1.11
    , base >= 4.14.3 && < 4.15
    , bytestring >= 0.10.12 && < 0.11
    , containers >= 0.6.5 && < 0.7
    , text >= 1.2.4 && < 1.3
    , xmonad >= 0.17.0 && < 0.18
    , xmonad-contrib >= 0.17.0 && < 0.18
  
  default-extensions:
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    StrictData
    TypeApplications
    ViewPatterns

  ghc-options:
    -Weverything 
    -Wno-implicit-prelude 
    -Wno-safe 
    -Wno-unsafe 
    -Wno-missing-exported-signatures 
    -Wno-missing-import-lists 
    -Wno-missed-specialisations 
    -Wno-all-missed-specialisations 
    -Wno-missing-local-signatures 
    -Wno-monomorphism-restriction 
    -Wno-missing-deriving-strategies
    -Wno-missing-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -threaded
    -rtsopts
    -with-rtsopts=-N

  main-is: Main.hs
  hs-source-dirs: app
  other-modules:
    Hostname
    Colors.Nord
