cabal-version: 3.0

name: xmonad-local
version: 0.1.0.0

common shared
  default-language: Haskell2010
  build-depends: 
    , X11
    , base
    , bytestring
    , containers
    , directory ^>= 1.3.7
    , filepath
    , mtl
    , text
    , transformers
    , xmonad
    , xmonad-contrib
  default-extensions:
    FlexibleContexts
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RankNTypes   
    RecordWildCards
    StrictData
    TupleSections
    TypeApplications
    ViewPatterns
  ghc-options:
    -Weverything 
    -Wno-implicit-prelude 
    -Wno-safe 
    -Wno-unsafe 
    -Wno-missing-exported-signatures 
    -Wno-missing-import-lists 
    -Wno-missed-specialisations 
    -Wno-all-missed-specialisations 
    -Wno-missing-local-signatures 
    -Wno-monomorphism-restriction 
    -Wno-missing-deriving-strategies
    -Wno-missing-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module

library
  import: shared
  hs-source-dirs: src
  exposed-modules:
    XMonad.Local.Environment
    XMonad.Local.FilePaths
    XMonad.Local.Hooks
    XMonad.Local.Hostname
    XMonad.Local.Keys
    XMonad.Local.Layout
    XMonad.Local.ManageHook
    XMonad.Local.StartupHook
    XMonad.Local.StatusBar
    XMonad.Local.Theme
    XMonad.Local.Theme.Color
    XMonad.Local.Theme.Font
    XMonad.Local.Theme.Palettes.Nord
    XMonad.Local.Utils
    XMonad.Local.Workspaces

common shared-exe
  import: shared
  hs-source-dirs: app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wno-unused-packages
  build-depends:
    , xmonad-local

executable xmonad
  import: shared-exe
  main-is: XmonadMain.hs

executable xmobar
  import: shared-exe
  main-is: XmobarMain.hs
  build-depends:
    , xmobar >= 0.41 && < 0.42
