cabal-version: 3.4


name: shared
version: 0.1.0.0


flag pedantic
  default: False
  description: Enables @-Werror@, which turns warnings into errors.
  manual: True


common shared
  default-language: GHC2021

  default-extensions:
    AllowAmbiguousTypes
    DataKinds
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    StrictData
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Weverything 
    -Wno-all-missed-specialisations 
    -Wno-identities
    -Wno-implicit-prelude 
    -Wno-missed-specialisations 
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures 
    -Wno-missing-import-lists 
    -Wno-missing-local-signatures 
    -Wno-monomorphism-restriction 
    -Wno-safe 
    -Wno-unsafe 
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-missing-kind-signatures
    -Werror=incomplete-patterns

  if flag(pedantic)
    ghc-options:
      -Werror

  build-depends:
    , base >=4.7 && <5

  autogen-modules:
    Paths_shared
    
  other-modules:
    Paths_shared


library
  import: shared

  hs-source-dirs: src

  build-depends:
    , bytestring >= 0.11.3 && < 0.12
    , directory >= 1.3.8.0 && < 1.4
    , filepath >= 1.4.100.0 && < 1.5
    , text >= 1.2.5 && < 1.3

  exposed-modules:
    Shared.FilePaths
    Shared.Hostname
